--- a/automation/morning.yaml
+++ b/automation/morning.yaml
@@ -1,31 +1,30 @@
 #####################################################################
 ### Weekday Mornings
 #####################################################################
-
-- alias: weekday morning wakeup
-  trigger:
-    - platform: event
-      event_type: good_morning
-
-    - platform: time
-      at: '05:55:00'
-
-  condition:
-    - condition: state
-      entity_id: group.all_devices
-      state: 'home'
-
-    - condition: state
-      entity_id: input_boolean.holiday
-      state: 'off'
-
-    - condition: time
-      weekday:
-        - mon
-        - tue
-        - wed
-        - thu
-        - fri
-
-  action:
-    - service: script.morning_weekday
+#- alias: weekday morning wakeup
+#  trigger:
+#    - platform: event
+#      event_type: good_morning
+#
+#    - platform: time
+#      at: '05:55:00'
+#
+#  condition:
+#    - condition: state
+#      entity_id: group.all_devices
+#      state: 'home'
+#
+#    - condition: state
+#      entity_id: input_boolean.holiday
+#      state: 'off'
+#
+#    - condition: time
+#      weekday:
+#        - mon
+#        - tue
+#        - wed
+#        - thu
+#        - fri
+#
+#  action:
+#    - service: script.morning_weekday
