--- a/customize/customize.yaml
+++ b/customize/customize.yaml
@@ -2,403 +2,396 @@
 ### CLIMATE VIEW
 #####################################################################
 
-  group.climate_status:
-    order: 1
-  group.upstairs_climate:
-    order: 1
-  group.downstairs_climate:
-    order: 1
-  group.upstairs_cooling:
-    order: 2
-  group.upstairs_heating:
-    order: 3
-  group.downstairs_cooling:
-    order: 2
-  group.downstairs_heating:
-    order: 3
+#  group.climate_status:
+#    order: 1
+#  group.upstairs_climate:
+#    order: 1
+#  group.downstairs_climate:
+#    order: 1
+#  group.upstairs_cooling:
+#    order: 2
+#  group.upstairs_heating:
+#    order: 3
+#  group.downstairs_cooling:
+#    order: 2
+#  group.downstairs_heating:
+#    order: 3
 
 #####################################################################
 ### SWITCHES
 #####################################################################
 
 ## Accent - Spare
-  switch.rf_switch_3:
-    hidden: true
-    haaska_hidden: true
-    friendly_name: "Staircase Christmas Lights"
-    icon: mdi:stocking
+#  switch.rf_switch_3:
+#    hidden: true
+#    haaska_hidden: true
+#    friendly_name: "Staircase Christmas Lights"
+#    icon: mdi:stocking
 
 #####################################################################
 ### CLIMATE - Devices & Sensors
 #####################################################################
 
 ## downstairs
-  sensor.2gig_technologies_ct101_thermostat_iris_temperature_18_1:
-    friendly_name: "Downstairs Temp"
-
-  climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2:
-    friendly_name: "Downstairs Cooling Setpoint"
-
-  climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1:
-    friendly_name: "Downstairs Heating Setpoint"
-
-  sensor.hvac_downstairs_op_state:
-    icon: mdi:air-conditioner
-    haaska_hidden: true
-
-  sensor.hvac_downstairs_fan:
-    icon: mdi:fan
-    haaska_hidden: true
-
-  sensor.hvac_downstairs_ac_setpoint:
-    icon: mdi:snowflake
-    haaska_hidden: true
-
-  sensor.hvac_downstairs_heat_setpoint:
-    icon: mdi:fire
-    haaska_hidden: true
+#  sensor.2gig_technologies_ct101_thermostat_iris_temperature_18_1:
+#    friendly_name: "Downstairs Temp"
+#
+#  climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2:
+#    friendly_name: "Downstairs Cooling Setpoint"
+#
+#  climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1:
+#    friendly_name: "Downstairs Heating Setpoint"
+#
+#  sensor.hvac_downstairs_op_state:
+#    icon: mdi:air-conditioner
+#    haaska_hidden: true
+#
+#  sensor.hvac_downstairs_fan:
+#    icon: mdi:fan
+#    haaska_hidden: true
+#
+#  sensor.hvac_downstairs_ac_setpoint:
+#    icon: mdi:snowflake
+#    haaska_hidden: true
+#
+#  sensor.hvac_downstairs_heat_setpoint:
+#    icon: mdi:fire
+#    haaska_hidden: true
 
 ## upstairs
-  sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1:
-    friendly_name: "Upstairs Temp"
-
-  climate.2gig_technologies_ct101_thermostat_iris_cooling_1_42_2:
-    friendly_name: "Upstairs Cooling Setpoint"
-
-  climate.2gig_technologies_ct101_thermostat_iris_heating_1_42_1:
-    friendly_name: "Upstairs Heating Setpoint"
-
-  sensor.hvac_upstairs_op_state:
-    icon: mdi:air-conditioner
-    haaska_hidden: true
-
-  sensor.hvac_upstairs_fan:
-    icon: mdi:fan
-    haaska_hidden: true
-
-  sensor.hvac_upstairs_ac_setpoint:
-    icon: mdi:snowflake
-    haaska_hidden: true
-
-  sensor.hvac_upstairs_heat_setpoint:
-    icon: mdi:fire
-    haaska_hidden: true
+#  sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1:
+#    friendly_name: "Upstairs Temp"
+#
+#  climate.2gig_technologies_ct101_thermostat_iris_cooling_1_42_2:
+#    friendly_name: "Upstairs Cooling Setpoint"
+#
+#  climate.2gig_technologies_ct101_thermostat_iris_heating_1_42_1:
+#    friendly_name: "Upstairs Heating Setpoint"
+#
+#  sensor.hvac_upstairs_op_state:
+#    icon: mdi:air-conditioner
+#    haaska_hidden: true
+#
+#  sensor.hvac_upstairs_fan:
+#    icon: mdi:fan
+#    haaska_hidden: true
+#
+#  sensor.hvac_upstairs_ac_setpoint:
+#    icon: mdi:snowflake
+#    haaska_hidden: true
+#
+#  sensor.hvac_upstairs_heat_setpoint:
+#    icon: mdi:fire
+#    haaska_hidden: true
 
 #####################################################################
 ### CLIMATE - SCRIPTS
 #####################################################################
 
-  script.heat_downstairs_60min:
-    friendly_name: "Downstairs Quick Heating"
-    entity_picture: /local/flame.png
+#  script.heat_downstairs_60min:
+#    friendly_name: "Downstairs Quick Heating"
+#    entity_picture: /local/flame.png
 
-  script.heat_upstairs_60min:
-    friendly_name: "Upstairs Quick Heating"
-    entity_picture: /local/flame.png
+#  script.heat_upstairs_60min:
+#    friendly_name: "Upstairs Quick Heating"
+#    entity_picture: /local/flame.png
 
-  script.cool_downstairs_60min:
-    friendly_name: "Downstairs Quick Cooling"
-    entity_picture: /local/snowflake.png
+#  script.cool_downstairs_60min:
+#    friendly_name: "Downstairs Quick Cooling"
+#    entity_picture: /local/snowflake.png
 
-  script.cool_upstairs_60min:
-    friendly_name: "Upstairs Quick Cooling"
-    entity_picture: /local/snowflake.png
+#  script.cool_upstairs_60min:
+#    friendly_name: "Upstairs Quick Cooling"
+#    entity_picture: /local/snowflake.png
 
-  script.mbr_fan_speed_step_low:
-    friendly_name: "Master Bedroom Fan Auto Low"
-    icon: mdi:fan
-    haaska_hidden: true
-
-  script.mbr_fan_speed_step_high:
-    friendly_name: "Master Bedroom Fan Auto High"
-    icon: mdi:fan
-    haaska_hidden: true
+#  script.mbr_fan_speed_step_low:
+#    friendly_name: "Master Bedroom Fan Auto Low"
+#    icon: mdi:fan
+#    haaska_hidden: true
+#
+#  script.mbr_fan_speed_step_high:
+#    friendly_name: "Master Bedroom Fan Auto High"
+#    icon: mdi:fan
+#    haaska_hidden: true
 
 #####################################################################
 ### SCRIPTS (other)
 #####################################################################
-  script.script_test:
-    friendly_name: "Test Script"
-    icon: mdi:play-circle
-
-  script.morning_weekday:
-    friendly_name: "Weekday Morning"
-    hidden: true
-    icon: mdi:play-circle
-
-  script.away:
-    friendly_name: "Away Mode"
-    hidden: true
-    icon: mdi:play-circle
-
-  script.time_temp:
-    friendly_name: "Time and Temp"
-    hidden: true
-    icon: mdi:play-circle
-
-  script.tv_power_off:
-    friendly_name: "TV Shutdown"
-    icon: mdi:power
-
-  script.company_mode:
-    friendly_name: "Company Mode"
-    icon: mdi:play-circle
-
-#####################################################################
-### SCENARIOS
-#####################################################################
-
-## bedtime mode
-  script.bedtime:
-    friendly_name: "Bedtime"
-    icon: mdi:hotel
-
-## early morning scene
-  scene.early_morning:
-    icon: mdi:weather-sunset-up
-
-## Shutdown lights and devices
-  script.shutdown_lights:
-    icon: mdi:play-circle
-
-## Living Room Bright
-  scene.living_room_bright:
-    friendly_name: "Living Room Bright"
-    icon: mdi:play-circle
-
-## Living Room Normal
-  scene.living_room_normal:
-    friendly_name: "Living Room Normal"
-    icon: mdi:play-circle
-
-## Living Room Cloudy
-  scene.living_room_cloudy:
-    friendly_name: "Living Room Cloudy"
-    icon: mdi:play-circle
-
-## Movie Dim
-  scene.living_room_dim:
-    friendly_name: "Living Room Dim"
-    icon: mdi:play-circle
-
-## Movie Playing
-  scene.movie_time:
-    friendly_name: "Movie Time"
-    icon: mdi:play-circle
-
-## Movie Paused
-  scene.movie_paused:
-    icon: mdi:play-circle
-    hidden: true
-    haaska_hidden: true
-
-## Movie Ended
-  scene.movie_ended:
-    icon: mdi:play-circle
-    hidden: true
-    haaska_hidden: true
-
-## Test script
-  script.desk_lamp:
-    friendly_name: "Desk Lamp Test"
-    icon: mdi:play-circle
-    haaska_hidden: true
-
-#####################################################################
-### BOOLEANS SLIDERS & INPUT SELECTS
-#####################################################################      
-
-  input_boolean.visitor_mode:
-    haaska_hidden: true
-#    persistent: true
-
-  input_boolean.peak_hours:
-    haaska_hidden: true
-#    persistent: true
-
-#  input_boolean.rain:
+#  script.script_test:
+#    friendly_name: "Test Script"
+#    icon: mdi:play-circle
+#
+#  script.morning_weekday:
+#    friendly_name: "Weekday Morning"
+#    hidden: true
+#    icon: mdi:play-circle
+#
+#  script.away:
+#    friendly_name: "Away Mode"
+#    hidden: true
+#    icon: mdi:play-circle
+#
+#  script.time_temp:
+#    friendly_name: "Time and Temp"
+#    hidden: true
+#    icon: mdi:play-circle
+#
+#  script.tv_power_off:
+#    friendly_name: "TV Shutdown"
+#    icon: mdi:power
+#
+#  script.company_mode:
+#    friendly_name: "Company Mode"
+#    icon: mdi:play-circle
+#
+######################################################################
+#### SCENARIOS
+######################################################################
+#
+### bedtime mode
+#  script.bedtime:
+#    friendly_name: "Bedtime"
+#    icon: mdi:hotel
+#
+### early morning scene
+#  scene.early_morning:
+#    icon: mdi:weather-sunset-up
+#
+### Shutdown lights and devices
+#  script.shutdown_lights:
+#    icon: mdi:play-circle
+#
+### Living Room Bright
+#  scene.living_room_bright:
+#    friendly_name: "Living Room Bright"
+#    icon: mdi:play-circle
+#
+### Living Room Normal
+#  scene.living_room_normal:
+#    friendly_name: "Living Room Normal"
+#    icon: mdi:play-circle
+#
+### Living Room Cloudy
+#  scene.living_room_cloudy:
+#    friendly_name: "Living Room Cloudy"
+#    icon: mdi:play-circle
+#
+### Movie Dim
+#  scene.living_room_dim:
+#    friendly_name: "Living Room Dim"
+#    icon: mdi:play-circle
+#
+### Movie Playing
+#  scene.movie_time:
+#    friendly_name: "Movie Time"
+#    icon: mdi:play-circle
+#
+### Movie Paused
+#  scene.movie_paused:
+#    icon: mdi:play-circle
+#    hidden: true
+#    haaska_hidden: true
+#
+### Movie Ended
+#  scene.movie_ended:
+#    icon: mdi:play-circle
+#    hidden: true
+#    haaska_hidden: true
+#
+### Test script
+#  script.desk_lamp:
+#    friendly_name: "Desk Lamp Test"
+#    icon: mdi:play-circle
+#    haaska_hidden: true
+#
+######################################################################
+#### BOOLEANS SLIDERS & INPUT SELECTS
+######################################################################      
+#
+#  input_boolean.visitor_mode:
+#    haaska_hidden: true
+#
+#  input_boolean.peak_hours:
+#    haaska_hidden: true
+#
+#  input_boolean.state_change_test:
+#    haaska_hidden: true
+#
+#  input_boolean.after_hours:
 #    haaska_hidden: true
 
-  input_boolean.state_change_test:
-    haaska_hidden: true
-#    persistent: true
+#  input_slider.downstairs_heat:
+#    icon: mdi:nest-thermostat
+#
+#  input_slider.downstairs_ac:
+#    icon: mdi:nest-thermostat
 
-  input_boolean.after_hours:
-    haaska_hidden: true
-#    persistent: true
+#  input_slider.upstairs_heat:
+#    icon: mdi:nest-thermostat
+#
+#  input_slider.upstairs_ac:
+#    icon: mdi:nest-thermostat
 
-  input_slider.downstairs_heat:
-    icon: mdi:nest-thermostat
-
-  input_slider.downstairs_ac:
-    icon: mdi:nest-thermostat
-
-  input_slider.upstairs_heat:
-    icon: mdi:nest-thermostat
-
-  input_slider.upstairs_ac:
-    icon: mdi:nest-thermostat
-
-  input_select.living_room_fan_speed:
-    icon: mdi:fan
-    haaska_hidden: true
+#  input_select.living_room_fan_speed:
+#    icon: mdi:fan
+#    haaska_hidden: true
 
 #####################################################################
 ### SENSORS
 #####################################################################
 
 ## Door Lock Batteries
-  sensor.lock_beach_battery:
-    icon: mdi:battery-charging
-  sensor.lock_south_battery:
-    icon: mdi:battery-charging
+#  sensor.lock_beach_battery:
+#    icon: mdi:battery-charging
+#  sensor.lock_south_battery:
+#    icon: mdi:battery-charging
+#
+### Phone Batteries
+#  sensor.iphwn666_battery_level:
+#    friendly_name: "Rick's Phone Battery"
+#    icon: mdi:cellphone-iphone
+#
+#  sensor.iphone7_battery_level:
+#    friendly_name: "Meg's Phone Battery"
+#    icon: mdi:cellphone-iphone
 
-## Phone Batteries
-  sensor.iphwn666_battery_level:
-    friendly_name: "Rick's Phone Battery"
-    icon: mdi:cellphone-iphone
-
-  sensor.iphone7_battery_level:
-    friendly_name: "Meg's Phone Battery"
-    icon: mdi:cellphone-iphone
-
-## Fibaro Motion
-  sensor.fibaro_state:
-    friendly_name: "Fibaro Motion Status"
-    icon: mdi:run
-  sensor.fibaro_system_fgms001_motion_sensor_luminance_22_3:
-    friendly_name: "Fibaro Light Sensor"
-    icon: mdi:white-balance-sunny
-
-## Camera Sensors
-  sensor.kitchen_ptz_motion_detected:
-    friendly_name: "Kitchen PTZ Motion"
-    icon: mdi:run
-  sensor.north_ptz_motion_detected:
-    friendly_name: "North PTZ Motion"
-    icon: mdi:run
-  sensor.kitchen_ptz_ptz_preset:
-    friendly_name: "Kitchen PTZ Preset"
-    icon: mdi:arrow-expand-all
-  sensor.north_ptz_ptz_preset:
-    friendly_name: "North PTZ Preset"
-    icon: mdi:arrow-expand-all
-  sensor.kitchen_ptz_sd_used:
-    friendly_name: "Kitchen PTZ SD Card"
-    icon: mdi:sd
-  sensor.north_ptz_sd_used:
-    friendly_name: "North PTZ SD Card"
-    icon: mdi:sd
-
-## Breaches (Have I Been Pwned)
-  sensor.breaches_ricknmegsgmailcom:
-    icon: mdi:email-secure
-  sensor.breaches_rixjunkcoxnet:
-    icon: mdi:email-secure
-
-  sensor.crime:
-    icon: mdi:bomb
+### Fibaro Motion
+#  sensor.fibaro_state:
+#    friendly_name: "Fibaro Motion Status"
+#    icon: mdi:run
+#  sensor.fibaro_system_fgms001_motion_sensor_luminance_22_3:
+#    friendly_name: "Fibaro Light Sensor"
+#    icon: mdi:white-balance-sunny
+#
+### Camera Sensors
+#  sensor.kitchen_ptz_motion_detected:
+#    friendly_name: "Kitchen PTZ Motion"
+#    icon: mdi:run
+#  sensor.north_ptz_motion_detected:
+#    friendly_name: "North PTZ Motion"
+#    icon: mdi:run
+#  sensor.kitchen_ptz_ptz_preset:
+#    friendly_name: "Kitchen PTZ Preset"
+#    icon: mdi:arrow-expand-all
+#  sensor.north_ptz_ptz_preset:
+#    friendly_name: "North PTZ Preset"
+#    icon: mdi:arrow-expand-all
+#  sensor.kitchen_ptz_sd_used:
+#    friendly_name: "Kitchen PTZ SD Card"
+#    icon: mdi:sd
+#  sensor.north_ptz_sd_used:
+#    friendly_name: "North PTZ SD Card"
+#    icon: mdi:sd
+#
+### Breaches (Have I Been Pwned)
+#  sensor.breaches_ricknmegsgmailcom:
+#    icon: mdi:email-secure
+#  sensor.breaches_rixjunkcoxnet:
+#    icon: mdi:email-secure
+#
+#  sensor.crime:
+#    icon: mdi:bomb
 
 #####################################################################
 ### SENSORS (climate)
 #####################################################################
 
 ## HVAC Downstairs Thermostat Mode
-  sensor.hvac_downstairs_mode:
-    icon: mdi:nest-thermostat
+#  sensor.hvac_downstairs_mode:
+#    icon: mdi:nest-thermostat
 
 ## HVAC Upstairs Thermostat Mode
-  sensor.hvac_upstairs_mode:
-    icon: mdi:nest-thermostat
-
-## HVAC Downstairs Mean Temp
-  sensor.downstairs_thermostat_statistics_mean:
-    friendly_name: Downstairs Thermostat Mean Temp
-    icon: mdi:chart-areaspline
-
-# Downstairs Front Entry Fibaro Temperature
-  sensor.fibaro_system_fgms001_motion_sensor_temperature_22_1:
-    friendly_name: Front Entry Temperature
-    icon: mdi:thermometer
-
-# Downstairs Broadlink Sensor
-  sensor.broadlink_sensor_temperature:
-    friendly_name: Entryway Temperature
-    icon: mdi:thermometer
+#  sensor.hvac_upstairs_mode:
+#    icon: mdi:nest-thermostat
+#
+### HVAC Downstairs Mean Temp
+#  sensor.downstairs_thermostat_statistics_mean:
+#    friendly_name: Downstairs Thermostat Mean Temp
+#    icon: mdi:chart-areaspline
+#
+## Downstairs Front Entry Fibaro Temperature
+#  sensor.fibaro_system_fgms001_motion_sensor_temperature_22_1:
+#    friendly_name: Front Entry Temperature
+#    icon: mdi:thermometer
+#
+## Downstairs Broadlink Sensor
+#  sensor.broadlink_sensor_temperature:
+#    friendly_name: Entryway Temperature
+#    icon: mdi:thermometer
 
 ## HVAC Upstairs Mean Temp
-  sensor.upstairs_thermostat_statistics_mean:
-    friendly_name: Upstairs Thermostat Mean Temp
-    icon: mdi:chart-areaspline
+#  sensor.upstairs_thermostat_statistics_mean:
+#    friendly_name: Upstairs Thermostat Mean Temp
+#    icon: mdi:chart-areaspline
 
 ## HVAC Downstairs Climate
-  sensor.hvac_downstairs_climate:
-    icon: mdi:air-conditioner
+#  sensor.hvac_downstairs_climate:
+#    icon: mdi:air-conditioner
 
 ## HVAC Upstairs Climate
-  sensor.hvac_upstairs_climate:
-    icon: mdi:air-conditioner
+#  sensor.hvac_upstairs_climate:
+#    icon: mdi:air-conditioner
 
 ## Peak Hours
-  sensor.peak_hours_status:
-    icon: mdi:clock
+#  sensor.peak_hours_status:
+#    icon: mdi:clock
 
 #####################################################################
 ### SENSORS (status)
 #####################################################################
 
-## Commute Times (google traffic)
-  sensor.rick_work_commute:
-    friendly_name: "Rick Commute to Work"
-    icon: mdi:car
-
-  sensor.rick_home_commute:
-    friendly_name: "Rick Commute Home"
-    icon: mdi:car
-
-  sensor.megs_work_commute:
-    friendly_name: "Megs Commute to Work"
-    icon: mdi:car
-
-  sensor.megs_home_commute:
-    friendly_name: "Megs Commute Home"
-    icon: mdi:car
-
-# ETA Times
-  sensor.rick_eta_home:
-    friendly_name: "Ricks ETA"
-    icon: mdi:timer
-
-  sensor.ricks_eta:
-    icon: mdi:timer
-
-  sensor.megs_eta_home:
-    friendly_name: "Megs ETA"
-    icon: mdi:timer
-
-  sensor.megs_eta:
-    icon: mdi:timer
+### Commute Times (google traffic)
+#  sensor.rick_work_commute:
+#    friendly_name: "Rick Commute to Work"
+#    icon: mdi:car
+#
+#  sensor.rick_home_commute:
+#    friendly_name: "Rick Commute Home"
+#    icon: mdi:car
+#
+#  sensor.megs_work_commute:
+#    friendly_name: "Megs Commute to Work"
+#    icon: mdi:car
+#
+#  sensor.megs_home_commute:
+#    friendly_name: "Megs Commute Home"
+#    icon: mdi:car
+#
+## ETA Times
+#  sensor.rick_eta_home:
+#    friendly_name: "Ricks ETA"
+#    icon: mdi:timer
+#
+#  sensor.ricks_eta:
+#    icon: mdi:timer
+#
+#  sensor.megs_eta_home:
+#    friendly_name: "Megs ETA"
+#    icon: mdi:timer
+#
+#  sensor.megs_eta:
+#    icon: mdi:timer
 
 #####################################################################
 ### Test Booleans for Condition Testing
 #####################################################################
 
-  input_boolean.condition_1:
-    friendly_name: "Test Condition 1"
-    icon: mdi:checkbox-marked-circle
-
-  input_boolean.condition_2:
-    friendly_name: "Test Condition 2"
-    icon: mdi:checkbox-marked-circle
-
-  input_boolean.condition_3:
-    friendly_name: "Test Condition 3"
-    icon: mdi:checkbox-marked-circle
-
-  input_boolean.condition_4:
-    friendly_name: "Test Condition 4"
-    icon: mdi:checkbox-marked-circle
-
-  input_boolean.condition_5:
-    friendly_name: "Test Condition 5"
-    icon: mdi:checkbox-marked-circle
+#  input_boolean.condition_1:
+#    friendly_name: "Test Condition 1"
+#    icon: mdi:checkbox-marked-circle
+#
+#  input_boolean.condition_2:
+#    friendly_name: "Test Condition 2"
+#    icon: mdi:checkbox-marked-circle
+#
+#  input_boolean.condition_3:
+#    friendly_name: "Test Condition 3"
+#    icon: mdi:checkbox-marked-circle
+#
+#  input_boolean.condition_4:
+#    friendly_name: "Test Condition 4"
+#    icon: mdi:checkbox-marked-circle
+#
+#  input_boolean.condition_5:
+#    friendly_name: "Test Condition 5"
+#    icon: mdi:checkbox-marked-circle
