--- a/packages/device_trackers.yaml
+++ b/packages/device_trackers.yaml
@@ -15,7 +15,41 @@ homeassistant:
       entity_picture: /local/megs.jpg
       haaska_hidden: true
 
+    sensor.rick_work_commute:
+      friendly_name: "Rick Commute to Work"
+      icon: mdi:car
+
+    sensor.rick_home_commute:
+      friendly_name: "Rick Commute Home"
+      icon: mdi:car
+
+    sensor.megs_work_commute:
+      friendly_name: "Megs Commute to Work"
+      icon: mdi:car
+
+    sensor.megs_home_commute:
+      friendly_name: "Megs Commute Home"
+      icon: mdi:car
+
+    sensor.rick_eta_home:
+      friendly_name: "Ricks ETA"
+      icon: mdi:timer
+
+    sensor.ricks_eta:
+      icon: mdi:timer
+
+    sensor.megs_eta_home:
+      friendly_name: "Megs ETA"
+      icon: mdi:timer
+
+    sensor.megs_eta:
+      icon: mdi:timer
+
+
 device_tracker:
+################################################################
+## DEVICE TRACKERS
+################################################################
   - platform: ddwrt
     host: !secret router_ip
     username: !secret router_user
@@ -23,12 +57,106 @@ device_tracker:
     track_new_devices: no
     consider_home: 180
 
-# group config
+
 group:
   Family:
     entities:
       - device_tracker.iphone7
       - device_tracker.iphwn666
+
+  Travel Rick:
+    entities:
+      - device_tracker.iphwn666
+      - sensor.ricks_eta
+      - sensor.rick_home_commute
+      - sensor.rick_work_commute
+
+  Travel Megs:
+    entities:
+      - device_tracker.iphone7
+      - sensor.megs_eta
+      - sensor.megs_home_commute
+      - sensor.megs_work_commute
+
+
+proximity:
+  home:
+    ignored_zones:
+      - rick_work
+      - megs_work
+    devices:
+      - device_tracker.iphone7
+      - device_tracker.iphwn666
+    tolerance: 50
+    unit_of_measurement: mi
+
+
+sensor:
+#####################################################################
+### GOOGLE TRAVEL
+#####################################################################
+# sensor: google travel time - Rick Work Commute
+  - platform: google_travel_time
+    name: Rick Work Commute
+    api_key: !secret google_time_travel_api_key
+    origin: Home
+    destination: Rick Work
+
+# sensor: google travel time - Rick Home Commute
+  - platform: google_travel_time
+    name: Rick Home Commute
+    api_key: !secret google_time_travel_api_key
+    origin: Rick Work
+    destination: Home
+
+# sensor: google travel time - Megs Work Commute
+  - platform: google_travel_time
+    name: Megs Work Commute
+    api_key: !secret google_time_travel_api_key
+    origin: Home
+    destination: Megs Work
+
+# sensor: google travel time - Megs Home Commute
+  - platform: google_travel_time
+    name: Megs Home Commute
+    api_key: !secret google_time_travel_api_key
+    origin: Megs Work
+    destination: Home
+
+  # tracker for ETA Home
+  - platform: google_travel_time
+    name: Megs ETA Home
+    api_key: !secret google_time_travel_api_key
+    origin: device_tracker.iphone7
+    destination: Home
+
+  # tracker for ETA Home
+  - platform: google_travel_time
+    name: Rick ETA Home
+    api_key: !secret google_time_travel_api_key
+    origin: device_tracker.iphwn666
+    destination: Home
+
+  - platform: template
+    sensors:
+      ricks_eta:
+        friendly_name: "Rick's ETA"
+        value_template: >-
+          {% if is_state('sensor.rick_eta_home', '0') %}
+            Home
+          {% else %}
+            {{ states('sensor.rick_eta_home') }}
+          {% endif %}
+
+      megs_eta:
+        friendly_name: "Meg's ETA"
+        value_template: >-
+          {% if is_state('sensor.megs_eta_home', '0') %}
+            Home
+          {% else %}
+            {{ states('sensor.megs_eta_home') }}
+          {% endif %}
+
 
 automation:
 #####################################################################
