--- a/packages/media_players.yaml
+++ b/packages/media_players.yaml
@@ -35,6 +35,30 @@ group:
       - media_player.apple_tv
     #  - media_player.rnmcast
 
+  Living Room TV:
+    control: hidden
+    entities:
+      - switch.living_room_tv_power
+      - switch.living_room_tv_volume
+      - switch.living_room_tv_mute
+      - input_select.living_room_tv_input
+      - media_player.kodi_living_room
+
+  DirecTV:
+    control: hidden
+    entities:
+      - switch.directv_power
+      - switch.directv_play
+
+  Onkyo Amp:
+    control: hidden
+    entities:
+      - switch.amp_power
+      - switch.amp_volume
+      - switch.amp_mute
+      - input_select.onkyo_amp_input
+      - switch.amp_movie_mode
+      - switch.amp_music_mode
 
 media_player:
   - platform: kodi
@@ -159,6 +183,20 @@ scene:
         transition: 30
 
 
+script:
+#####################################################################
+### Power Off TV
+#####################################################################
+  tv_power_off:
+    sequence:
+
+    - service: switch.turn_off
+      entity_id: switch.tv_power
+
+    - service: switch.turn_off
+      entity_id: switch.directv_power
+
+
 automation:
 ####################################################################
 ### Adjust lighting scenes based on Kodi playback state
@@ -187,3 +225,51 @@ automation:
             {% else %}
               scene.living_room_normal
             {% endif %}
+
+######################################################################
+#### Living Room TV Input Select
+######################################################################
+  - alias: living_room_tv_input_selector
+    trigger:
+      - platform: state
+        entity_id: input_select.living_room_tv_input
+
+    condition:
+      - condition: template
+        value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
+
+    action:
+# Turn the corresponding switch on to send the fan speed command
+      - service: switch.turn_on
+        data_template:
+          entity_id: "switch.living_room_tv_input_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
+
+# Reset the Input Select to "Select an option..."
+      - service: input_select.select_option
+        data_template:
+          entity_id: "{{ trigger.to_state.entity_id }}"
+          option: Select an option...
+
+######################################################################
+#### Living Room Amp Input Select
+######################################################################
+  - alias: onkyo_amp_input_selector
+    trigger:
+      - platform: state
+        entity_id: input_select.onkyo_amp_input
+
+    condition:
+      - condition: template
+        value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
+
+    action:
+# Turn the corresponding switch on to send the fan speed command
+      - service: switch.turn_on
+        data_template:
+          entity_id: "switch.amp_input_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
+
+# Reset the Input Select to "Select an option..."
+      - service: input_select.select_option
+        data_template:
+          entity_id: "{{ trigger.to_state.entity_id }}"
+          option: Select an option...
