--- a/packages/weather.yaml
+++ b/packages/weather.yaml
@@ -122,4 +122,68 @@ group:
       - sensor.pws_visibility_mi
 
 
+sensor:
+#####################################################################
+### Seasons
+#####################################################################
+  - platform: template
+    sensors:
+      season:
+        friendly_name: "Seasonal Condition"
+        value_template: >-
+          {% set temperature = states('sensor.pws_temp_f')|float(none) %}
+          {% set winter_temp = states.input_slider.season_winter.state|default(62)|float %}
+          {% set summer_temp = states.input_slider.season_summer.state|default(74)|float %}
+          {% if temperature is none %}
+            {{ states('sensor.pws_temp_f') }}
+          {% elif temperature < winter_temp %}
+            Winter
+          {% elif temperature > summer_temp %}
+            Summer
+          {% else %}
+            Awesome
+          {% endif %}
+
+#####################################################################
+### WEATHER
+#####################################################################
+  - platform: moon
+
+  - platform: wunderground
+    api_key: !secret wu_api_key
+    monitored_conditions:
+      - weather
+      - alerts
+      - temp_f
+      - station_id
+      - feelslike_f
+      - feelslike_string
+      - heat_index_f
+      - heat_index_string
+      - dewpoint_f
+      - dewpoint_string
+      - wind_mph
+      - UV
+      - pressure_in
+      - pressure_mb
+      - wind_dir
+      - wind_string
+      - relative_humidity
+      - visibility_mi
+      - precip_today_in
+      - precip_today_string
+      - solarradiation
+      - observation_time
+
+  - platform: darksky
+    api_key: !secret forecast_api_key
+    monitored_conditions:
+      - nearest_storm_distance
+      - cloud_cover
+      - daily_summary
+      - precip_intensity
+      - precip_probability
+      - precip_intensity_max
+
+
 #automation:
