--- a/sensors/booleans.yaml
+++ b/sensors/booleans.yaml
@@ -4,8 +4,8 @@
 #####################################################################
 
 ## Peak Hours State
-- platform: template
-  sensors:
-    peak_hours_status:
-      value_template: "{{ is_state('input_boolean.peak_hours', 'on') or false }}"
-      friendly_name: "Peak Hours"
+#- platform: template
+#  sensors:
+#    peak_hours_status:
+#      value_template: "{{ is_state('input_boolean.peak_hours', 'on') or false }}"
+#      friendly_name: "Peak Hours"
