--- a/sensors/system.yaml
+++ b/sensors/system.yaml
@@ -2,41 +2,40 @@
 #####################################################################
 ### SYSTEM
 #####################################################################
-
-# sensor: date & time
-- platform: time_date
-  display_options:
-    - "date_time"
-
-# sensor: speed test
-- platform: speedtest
-  minute:
-    - 0
-    - 30
-  monitored_conditions:
-    - ping
-    - download
-    - upload
-
-# sensor: system monitor
-- platform: systemmonitor
-  resources:
-    - type: disk_free
-      arg: /home
-    - type: memory_free
-    - type: processor_use
-    - type: last_boot
-
-# sensor: SABNZBD
-- platform: sabnzbd
-  name: SAB
-  api_key: !secret sabnzb_api_key
-  host: 192.168.10.220
-  port: 8080
-  monitored_variables:
-    - 'current_status'
-    - 'speed'
-    - 'queue_size'
-    - 'queue_remaining'
-    - 'disk_size'
-    - 'disk_free'
+## sensor: date & time
+#- platform: time_date
+#  display_options:
+#    - "date_time"
+#
+## sensor: speed test
+#- platform: speedtest
+#  minute:
+#    - 0
+#    - 30
+#  monitored_conditions:
+#    - ping
+#    - download
+#    - upload
+#
+## sensor: system monitor
+#- platform: systemmonitor
+#  resources:
+#    - type: disk_free
+#      arg: /home
+#    - type: memory_free
+#    - type: processor_use
+#    - type: last_boot
+#
+## sensor: SABNZBD
+#- platform: sabnzbd
+#  name: SAB
+#  api_key: !secret sabnzb_api_key
+#  host: !secret sabnzb_host
+#  port: !secret sabnzb_port
+#  monitored_variables:
+#    - 'current_status'
+#    - 'speed'
+#    - 'queue_size'
+#    - 'queue_remaining'
+#    - 'disk_size'
+#    - 'disk_free'
